Bug 1201811 (part 1) - Don't use integer arithmetic when summing totals in rapl. r=erahm.